# Sorting-Algorithm-Visualizer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
dep/SimpleGL/include/: BufferObject.h  Rectangle.hpp  SGLEngine.hpp  SGLRect.hpp  ShaderManager.h  ShaderManager.hpp  ShaderProgram.h  ShaderProgram.hpp  Triangle.h  Triangle.hpp
dep/SimpleGL/src/: BufferObject.cpp  SGLEngine.cpp  SGLRect.cpp  ShaderManager.cpp  ShaderProgram.cpp  Triangle.cpp  VertexArray.cpp
src/: #main.cpp#  CMakeLists.txt  SortAlgs.cpp  SortAlgs.hpp  Sorting.cpp  Sorting.hpp  SortingRects.cpp  SortingRects.hpp  imgui.ini  main.cpp
src/old/: Sorting.hpp  main.cpp
src/shaders/: SortingRect.fs  SortingRect.vs  Triangle.fs  Triangle.vs
